# ncu-add-diary

./: .gitignore  CMakeLists.txt
src/: add_diary.cpp
